--- a/templates/register.html
+++ b/templates/register.html
@@ -1,19 +1,20 @@
 <html>
 <head>
+    <title>Register</title>
 </head>
 <body>
-<form action="/registerAuth" method="POST">
-	<input type="text" name = "username" placeholder="username" required/> </br>
-	<input type="password" name = "password" placeholder="password" required/></br>
-	<input type="submit" value = Register />
-	{% if error %}
-		<p class="error"><strong>Error:</strong> {{error}}</p>
-	{% endif %}
-</form>
+    <form action="/registerAuth" method="POST">
+        <input type="text" name="username" placeholder="Username" required /> <br />
+        <input type="password" name="password" placeholder="Password" required /><br />
+        <input type="text" name="fname" placeholder="First Name" required /><br />
+        <input type="text" name="lname" placeholder="Last Name" required /><br />
+        <input type="email" name="email" placeholder="Email Address" required /><br />
+        <input type="submit" value="Register" />
+        {% if error %}
+            <p class="error"><strong>Error:</strong> {{ error }}</p>
+        {% endif %}
+    </form>
 
-<a href="/">Go back</a>
-
+    <a href="/">Go back</a>
 </body>
-
-
 </html>
