--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="/findItemPage">Find Single Item</a></li>
         <li><a href="/findOrderItemsPage">Find Items in Order</a></li>
+        <li><a href="/acceptDonation">Accept Donation</a></li>
         <li><a href="/logout">Logout</a></li>
     </ul>
 </body>
