--- a/templates/error.html
+++ b/templates/error.html
@@ -5,6 +5,6 @@
 <body>
     <h1>Error</h1>
     <p style="color: red;">{{ error }}</p>
-    <a href="/">Back to Home</a>
+    <a href="/home">Back to Home</a>
 </body>
 </html>
