implemented start order

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,7 @@
         <li><a href="/findOrderItemsPage">Find Items in Order</a></li>
         <li><a href="/acceptDonation">Accept Donation</a></li>
         <li><a href="/logout">Logout</a></li>
+        <li><a href="/startOrder">Start Order</a></li>
     </ul>
 </body>
 </html>
