--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,9 @@
         <li><a href="/findItemPage">Find Single Item</a></li>
         <li><a href="/findOrderItemsPage">Find Items in Order</a></li>
         <li><a href="/acceptDonation">Accept Donation</a></li>
-        <li><a href="/logout">Logout</a></li>
         <li><a href="/startOrder">Start Order</a></li>
+        <li><a href="/addToOrder">Add To Order</a></li>
+        <li><a href="/logout">Logout</a></li>
     </ul>
 </body>
 </html>
