--- a/templates/addToOrder.html
+++ b/templates/addToOrder.html
@@ -6,6 +6,15 @@
     <h1>Add Items to Order</h1>
     <p>Welcome, {{ username }}! Use the form below to add items to the current order.</p>
 
+    <!-- Display Order Information -->
+    <div>
+        <h2>Order Details</h2>
+        <p><strong>Order ID:</strong> {{ order.orderID }}</p>
+        <p><strong>Order Date:</strong> {{ order.orderDate }}</p>
+        <p><strong>Supervisor:</strong> {{ order.supervisor }}</p>
+        <p><strong>Client:</strong> {{ order.client }}</p>
+    </div>
+
     <!-- Category Selection Form -->
     <form action="/fetchItems" method="POST">
         <label for="mainCategory">Main Category:</label>
@@ -32,6 +41,5 @@
 
     <a href="/itemsInOrder">View Items in Order</a> <br>
     <a href="/home">Back to Home</a>
-
 </body>
 </html>
